Exercice1/main.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_instance" "oc_project5" {

  ami           = "ami-04a81a99f5ec58529"
  instance_type = "t3.micro"

  tags = {
    Name = "OpenClassrooms-EDO-P5"
  }

  vpc_security_group_ids = ["${aws_security_group.oc_project5_sg.id}"]
  key_name = aws_key_pair.generated_key.key_name
}

resource "aws_security_group" "oc_project5_sg" {
  name = "allow-ssh"
  ingress {
    cidr_blocks = [
      "0.0.0.0/0"
    ]
    from_port = 22
    to_port   = 22
    protocol  = "tcp"
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

variable "generated_key_name" {
  type        = string
  default     = "openclassrooms_edo_p5"
  description = "Key-pair generated by Terraform"
}

// Création paire de clés SSH
resource "tls_private_key" "my_ssh_key" {
  algorithm = "RSA"
  rsa_bits  = 4096
}

resource "aws_key_pair" "generated_key" {
  key_name   = var.generated_key_name
  public_key = tls_private_key.my_ssh_key.public_key_openssh
}

// On stocke notre clé SSH privée localement dans le répertoire ~/.ssh
resource "local_sensitive_file" "pem_file" {
  filename             = pathexpand("~/.ssh/${aws_key_pair.generated_key.key_name}.pem")
  file_permission      = "600"
  directory_permission = "700"

  content = tls_private_key.my_ssh_key.private_key_pem
}

// Mise à jour du fichier Hosts_aws avec l'ip de l'EC2 et le nom de la clé générée
resource "local_file" "ansible_inventory" {
  filename = "${path.module}/Ansible/hosts_aws"

  content = <<EOF
[all]
${aws_instance.oc_project5.public_dns} ansible_ssh_user=ubuntu ansible_ssh_private_key_file=~/.ssh/${aws_key_pair.generated_key.key_name}.pem
EOF
}
